Major changes in Chapter 5

--- a/tables/04_configurations_vinnana.tex
+++ b/tables/04_configurations_vinnana.tex
@@ -3,6 +3,8 @@
     \centering
     \caption{Configurations used on node \emph{vinnana.kask}}\label{tbl:config_vinnana.kask}
     \setlength{\tabcolsep}{5mm}
+    \addtolength{\leftskip} {-5cm}
+    \addtolength{\rightskip}{-5cm}
     \begin{tblr}{
         vlines,
         row{1}={font=\bfseries,halign=c,bg=lightgray!30},
