--- a/tables/04_configurations_sanna.tex
+++ b/tables/04_configurations_sanna.tex
@@ -3,6 +3,8 @@
     \centering
     \caption{Configurations used on node \emph{sanna.kask}}\label{tbl:config_sanna.kask}
     \setlength{\tabcolsep}{5mm}
+    \addtolength{\leftskip} {-5cm}
+    \addtolength{\rightskip}{-5cm}
     \begin{tblr}{
         vlines,
         row{1}={font=\bfseries,halign=c,bg=lightgray!30},
