--- a/config/preamble.sty
+++ b/config/preamble.sty
@@ -1,7 +1,5 @@
-% % Configure settings for Polish
-% \usepackage{polski}
 % \usepackage[utf8]{inputenc}
-% \usepackage[polish]{babel}
+% \usepackage[english]{babel}
 
 \usepackage[a4paper,inner=3.5cm,outer=2.5cm,top=2.5cm,bottom=2.5cm]{geometry}
 
@@ -67,9 +65,9 @@
 % defernumbers=true enumerates the split bibliography of
 % references in numerical ascending order
 \usepackage[backend=bibtex,defernumbers=true]{biblatex}
+% \usepackage[backend=biber,defernumbers=true,style=numeric,sortcites,natbib=true,sorting=none]{biblatex}
 % \usepackage[backend=bibtex]{biblatex}
 \addbibresource{config/bibliography.bib}
-
 % Rename list of figures and list of tables
 % \addto\captionspolish{%
 %     \renewcommand\listfigurename{Wykaz rysunków}}%
