--- a/tables/04_benchmarks_sanna.tex
+++ b/tables/04_benchmarks_sanna.tex
@@ -10,6 +10,6 @@
                          & OMP-CPP   & OMP-CUDA  & OMP-CPP + OMP-CUDA   \\
         Benchmark \#1    & bt.C      & lu.D      & bt.C+lu.D            \\
         Benchmark \#2    & is.D      & sp.D      & is.D+sp.D            \\
-        Benchmark \#3    & lu.D      & ep.D      & lu.D+ep.D            \\
+        Benchmark \#3    & lu.C      & ep.D      & lu.D+ep.D            \\
     \end{tblr}
 \end{table}
